Update index layout section.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,7 +5,7 @@
 </a>
 <div class="container-fluid">
 
-    <section class="row nav">
+    <section class="row nav-section">
         <div class="text-center" style='width: 700px; margin: 0px auto;'>
             <nav class="navbar navbar-default">
                 <ul class="nav navbar-nav">
