Add more custom styles.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,9 +18,9 @@
         </div>
     </section>
 
-    <section class="row" style="background-color: #212E3A;" id="top">
+    <section class="row main-section" id="top">
         <div class="text-center" style='width: 700px; margin: 0px auto; padding-top: 60px;'>
-            <img src="https://s.gravatar.com/avatar/ea3ca2e73f7abf90d7d975bf8c65f8e8?s=300" class="img-circle" width="300" />
+            <img src="https://s.gravatar.com/avatar/ea3ca2e73f7abf90d7d975bf8c65f8e8?s=300" class="img-circle img-pp" width="300" />
             <h1>{{ site.title }}</h1>
             <p>
                 {{ content }}
