Add padding to all HTML sections.

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,11 @@
 $dark-blue: #212E3A;
 $font: "Open Sans";
 
+section
+{
+    padding: 50px;
+}
+
 .nav-section
 {
     background-color: $dark-blue;
