Add index content.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
 
     <section class="row nav-section">
-        <div class="text-center" style='width: 700px; margin: 0px auto;'>
+        <div class="text-center">
             <nav class="navbar navbar-default">
                 <ul class="nav navbar-nav">
                     <li><a href="#top">Welcome</a></li>
@@ -20,7 +20,7 @@
 
     <section class="row main-section" id="top">
         <div class="text-center" style='width: 700px; margin: 0px auto; padding-top: 60px;'>
-            <img src="https://s.gravatar.com/avatar/ea3ca2e73f7abf90d7d975bf8c65f8e8?s=300" class="img-circle img-pp" width="300" />
+            <img src="https://s.gravatar.com/avatar/ea3ca2e73f7abf90d7d975bf8c65f8e8?s=250" class="img-circle img-pp" width="250" />
             <h1>{{ site.title }}</h1>
             <p>
                 {{ content }}
