--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,4 +14,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js" type="text/javascript"></script>
 </head>
-<body data-spy="scroll" data-target=".navbar-default">
+<body data-spy="scroll" data-target=".navbar-default" data-offset="0">
