--- a/css/main.scss
+++ b/css/main.scss
@@ -59,6 +59,22 @@ section
     }
 }
 
+.button-up
+{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    background-color: $dark-blue;
+    color: #D9534F;
+    font-size: 22px;
+    line-height: 42px;
+    text-align: center;
+    cursor: pointer;
+}
+
 .img-pp
 {
     border: 6px solid #ffffff;
