--- a/css/main.scss
+++ b/css/main.scss
@@ -171,6 +171,12 @@ article
     border: none !important;
 }
 
+.pager li > a:hover
+{
+    background-color: transparent !important;
+    text-decoration: underline;
+}
+
 .sidebar-header
 {
     text-align: center;
