--- a/css/main.scss
+++ b/css/main.scss
@@ -212,3 +212,18 @@ article
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
+.tag
+{
+    background-color: #CCC;
+    padding: 5px 10px;
+    color: #FFF;
+    cursor: pointer;
+    font-size: 12px;
+    margin-left: 2px;
+}
+
+.tag:hover
+{
+    background-color: $dark-green !important;
+}
