--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,44 +23,8 @@ layout: default
             {{ content }}
         </div>
 
-        {% unless page.tags == empty %}
-        <ul class="list-inline">
-            <li><i class="fa fa-tags"></i></li>
-            {% assign tags_list = page.tags %}
-            {% for tag in tags_list %}
-            <li>
-                <a class="tag" href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag[0] }}-ref">
-                    {{ tag }}
-                </a>
-            </li>
-            {% endfor %}
-        </ul>
-        {% endunless %}
-
     </div>
 </article>
 <div class="clearfix"></div>
 
-<br/>
-
-<hr>
-<ul class="pager">
-    {% if page.previous %}
-    <li class="previous">
-        <a href="{{ site.url }}{{ page.previous.url }}" title="{{ page.previous.title }}">
-            <i class="fa fa-chevron-left"></i>
-            {{ page.previous.title }}
-        </a>
-    </li>
-    {% endif %}
-
-    {% if page.next %}
-    <li class="next">
-        <a href="{{ site.url }}{{ page.next.url }}" title="{{ page.next.title }}">
-            {{ page.next.title }}
-            <i class="fa fa-chevron-right"></i>
-        </a>
-    </li>
-    {% endif %}
-</ul>
-<hr>
+{% include pager.html %}
