--- a/css/main.scss
+++ b/css/main.scss
@@ -69,6 +69,11 @@ h2
     font-weight: normal;
 }
 
+article.home h2
+{
+    margin-bottom: 15px !important;
+}
+
 article.home h3 a,
 article.home h3,
 h3
