--- a/css/main.scss
+++ b/css/main.scss
@@ -66,7 +66,7 @@ h2
 {
     font-family: $font;
     position: relative;
-    color: $dark-red !important;
+    color: $dark-grey !important;
     font-weight: normal;
 }
 
