--- a/_includes/pager.html
+++ b/_includes/pager.html
@@ -4,7 +4,7 @@
 <ul class="pager">
     {% if page.previous %}
     <li class="previous">
-        <a href="{{ site.BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">
+        <a href="{{ site.url }}{{ page.previous.url }}" title="{{ page.previous.title }}">
             <i class="fa fa-chevron-left" style='margin-right: 10px;'></i>{{ page.previous.title }}
         </a>
     </li>
@@ -12,7 +12,7 @@
 
     {% if page.next %}
     <li class="next">
-        <a href="{{ site.BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">
+        <a href="{{ site.url }}{{ page.next.url }}" title="{{ page.next.title }}">
             {{ page.next.title }}<i class="fa fa-chevron-right" style="margin-left: 10px;"></i>
         </a>
     </li>
