--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <body>
     <nav class="navbar navbar-default visible-xs" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{{ site.BASE_PATH }}/">
+            <a class="navbar-brand" href="{{ site.url }}/">
                 <img src="https://s.gravatar.com/avatar/ea3ca2e73f7abf90d7d975bf8c65f8e8?s=35" class="img-circle img-pp" width="35" />
                 {{ site.title }}
             </a>
