Tweak alignment of share buttons.

--- a/css/main.scss
+++ b/css/main.scss
@@ -280,6 +280,17 @@ article
     padding: 5px;
 }
 
+.twitter-share-button
+{
+    vertical-align: middle;
+}
+
+.fb-like
+{
+    heignt: 20px;
+    line-height: 20px;
+    vertical-align: middle;
+}
 
 
 
