--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,7 @@ layout: default
 </article>
 <div class="clearfix"></div>
 
+{{ page.old_url }}
 <div class="fb-like" data-href="{{ site.url }}{{ post.url }}" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
 <a href="{{ site.url }}{{ post.url }}" class="twitter-share-button" data-via="Arcturial">Tweet</a>
 
