--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,8 +27,7 @@ layout: default
 </article>
 <div class="clearfix"></div>
 
-{{ page.old_url }}
-<div class="fb-like" data-href="{{ site.url }}{{ post.url }}" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-<a href="{{ site.url }}{{ post.url }}" class="twitter-share-button" data-via="Arcturial">Tweet</a>
+<div class="fb-like" data-href="{% if post.old_url %}{{ post.old_url }}{% else %}{{ site.url }}{{ post.url }}{% endif %}" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+<a href="{% if post.old_url %}{{ post.old_url }}{% else %}{{ site.url }}{{ post.url }}{% endif %}" class="twitter-share-button" data-via="Arcturial">Tweet</a>
 
 {% include pager.html %}
