--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
 </article>
 <div class="clearfix"></div>
 
-<div class="fb-like" data-href="{% if page.old_url %}{{ page.old_url }}{% else %}{{ site.url }}{{ page.url }}{% endif %}" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-<a href="https://twitter.com/share" data-url="{% if page.old_url %}{{ page.old_url }}{% else %}{{ site.url }}{{ page.url }}{% endif %}" class="twitter-share-button" data-via="Arcturial">Tweet</a>
+<div class="fb-like" data-href="{% if page.old_url %}{{ page.old_url }}{% else %}{{ site.baseurl }}{{ page.url }}{% endif %}" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+<a href="https://twitter.com/share" data-url="{% if page.old_url %}{{ page.old_url }}{% else %}{{ site.baseurl }}{{ page.url }}{% endif %}" class="twitter-share-button" data-via="Arcturial">Tweet</a>
 
 {% include pager.html %}
