--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,12 @@
         </div>
     </nav>
 
-    <div class="row">
-        <div class="col-md-3 sidebar">
-            {% include sidebar.html %}
-        </div>
-        <div class="col-md-9 default-content">
-            {{ content }}
-        </div>
+    <div class="col-sm-3 sidebar hidden-xs">
+        {% include sidebar.html %}
+    </div>
+
+    <div class="col-sm-9 col-sm-offset-3 default-content">
+        {{ content }}
     </div>
 
     {% include footer.html %}
