Revert config to using the url variable instead of baseurl.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet" type="text/css">
+    <link href="{{ site.url }}/css/main.css" rel="stylesheet" type="text/css">
 
     <!-- GA Include -->
     <script>
