--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,9 @@
 <header class="sidebar-header" role="banner">
-    <a href="{{ site.baseurl }}/">
+    <a href="{{ site.url }}/">
         <img src="https://s.gravatar.com/avatar/ea3ca2e73f7abf90d7d975bf8c65f8e8?s=200" class="img-circle img-pp" width="200" alt="{{ site.title }}" />
     </a>
     <h3 class="title">
-        <a href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <a href="{{ site.url }}/">{{ site.title }}</a>
     </h3>
 </header>
 
