Implement bootstrap row formatting.

--- a/css/main.scss
+++ b/css/main.scss
@@ -38,7 +38,7 @@ a:hover
 {
     background-color: $blue !important;
     color: #fff !important;
-    position: fixed;
+    position: relative;
     top: 0px;
     padding-top: 6%;
 }
