Wrap the row in a .container.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,14 @@
         </div>
     </nav>
 
-    <div class="row">
-        <div class="col-lg-3 sidebar hidden-xs">
-            {% include sidebar.html %}
-        </div>
-        <div class="col-lg-9 default-content">
-            {{ content }}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 sidebar hidden-xs">
+                {% include sidebar.html %}
+            </div>
+            <div class="col-lg-9 default-content">
+                {{ content }}
+            </div>
         </div>
     </div>
 
