Set the minimum width for a code display.

--- a/_includes/pager.html
+++ b/_includes/pager.html
@@ -5,7 +5,7 @@
     {% if page.previous %}
     <li class="previous">
         <a href="{{ site.url }}{{ page.previous.url }}" title="{{ page.previous.title }}">
-            <span class="visible-xs"><i class="fa fa-fw fa-chevron-right"></i>&nbsp;Previous</span>
+            <span class="visible-xs"><i class="fa fa-fw fa-chevron-left"></i>&nbsp;Previous</span>
             <span class="hidden-xs"><i class="fa fa-fw fa-chevron-left"></i>&nbsp;{{ page.previous.title }}</span>
         </a>
     </li>
