Add social icons to mobile mode.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,18 @@
             <a class="navbar-brand" href="{{ site.url }}/">
                 {{ site.title }}
             </a>
+
+            <ul class="list-unstyled list-inline pull-right">
+                <li>
+                    <a href="{{ site.linkedin }}" class="social-link" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                </li>
+                <li>
+                    <a href="{{ site.github }}" class="social-link" target="_blank"><i class="fa fa-github"></i></a>
+                </li>
+                <li>
+                    <a href="{{ site.twitter }}" class="social-link" target="_blank"><i class="fa fa-twitter"></i></a>
+                </li>
+            </ul>
         </div>
     </nav>
 
