--- a/css/main.scss
+++ b/css/main.scss
@@ -59,7 +59,8 @@ a:hover
 .navbar ul
 {
     padding-top: 5px !important;
-    margin: 0px !important;
+    margin-bottom: 0px !important;
+    margin-right: 5px !important;
 }
 
 .navbar .navbar-header .navbar-brand
