--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,6 +31,12 @@ if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.t
 
 <!-- Disqus Include -->
 <script type="text/javascript">
+// called by disqus
+function disqus_config() {
+    this.callbacks.onReady = [function() {
+        alert('asd');
+    }];
+}
 var disqus_shortname = 'cainsvault';
 (function () {
 var s = document.createElement('script'); s.async = true;
