Hide disqus thread on load.

--- a/css/main.scss
+++ b/css/main.scss
@@ -394,6 +394,11 @@ article
 .highlight .si,.highlight .sx,.highlight .sr,.highlight .s1,.highlight .ss { color:#e6db74 !important; }
 .highlight .na,.highlight .nc,.highlight .nd,.highlight .ne,.highlight .nf,.highlight .nx { color:#a6e22e !important; }
 
+#disqus_thread
+{
+    display: none;
+}
+
 @media screen and (max-width: 767px) {
     .default-content
     {
