Hide overflow content in disqus thread.

--- a/css/main.scss
+++ b/css/main.scss
@@ -397,6 +397,7 @@ article
 #disqus_thread
 {
     height: 0px;
+    overflow: hidden !important;
     -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
