Use the iframe outer height.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,10 +31,9 @@ if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.t
 
 <!-- Disqus Include -->
 <script type="text/javascript">
-// called by disqus
 function disqus_config() {
     this.callbacks.onReady = [function() {
-        $("#disqus_thread").css("height", $("#disqus_thread iframe").height());
+        $("#disqus_thread").css("height", $("#disqus_thread iframe").outerHeight());
     }];
 }
 var disqus_shortname = 'cainsvault';
