--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,4 +33,11 @@ layout: default
 <hr>
 <div id="disqus_thread"></div>
 
+<script type="text/javascript">
+(function() {
+var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+})();
+</script>
 {% include pager.html %}
